tekst i cirklen støt.html

--- a/del.html
+++ b/del.html
@@ -61,7 +61,7 @@
    <main>
   
     <h1>Del dine minder og vind gratis drikkevarer</h1>
-    <p>På vores Instagram kører vi løbende konkurrencer, hvor man kan vinde billetter, drikkevarer og meget andet! Hver gang Radar afholder en koncert eller event, har du mulighed for at vinde 2xvalgfrie drikkevarer!</p>
+    <p>På vores Instagram kører vi løbende konkurrencer, hvor man kan vinde billetter, drikkevarer og meget andet. Hver gang Radar afholder en koncert eller event, har du mulighed for at vinde 2xvalgfrie drikkevarer!</p>
     <section class="story">
         <img src="stoet/story.webp" alt="story1">
         <img src="stoet/story2.webp" alt="story2">
