--- a/stot.html
+++ b/stot.html
@@ -110,7 +110,7 @@
             <input type="checkbox" id="tryk5" hidden>
             <label for="tryk5" class="open">Del dine minder</label>
             <section class="popup">
-                <p>Har du været til en fantastisk koncert på Radar? Del dine oplevelser på Instagram Story, tag Radar, og vær med i lodtrækningen om 2 gratis valgfrie drikkevarer! Det er vores måde at takke dig på for at dele magiske øjeblikke med os. Så tag din Story, og måske er det dig, der vinder!</p>
+                <p>En helt gratis måde at støtte os på er, at hoppe ind på vores Instagram og dele dine minder fra koncerter på Radar. Det gør, at du hjælper os med at sprede vores budskab. Hver gang du deltager til en koncert eller et event har du mulighed for at vinde lækre præmier, når du deler minder på din story. Læs mere om det <a href="del.html">lige her.</a></p>
                 <label for="tryk5" class="close">Luk</label>
                 <input type="checkbox" id="close5" hidden>
                 </section>
