--- a/stot.html
+++ b/stot.html
@@ -122,7 +122,9 @@
    
 
     <h2>Hvorfor skal du støtte Radar</h2>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus totam cumque, autem necessitatibus, sit sunt cupiditate illo ducimus dignissimos eum labore quae impedit fugit quidem perferendis reiciendis exercitationem nemo debitis.</p>
+    <p>I år 2024 lever vi i en verden, hvor alting går hurtigt og tingene udvikler sig ekstremt hurtigt. Derfor kan det være svært for et lille lokalt spillested som Radar at overleve. Men dette er grunden til, at Radar SKAL have en fremtid. Hos Radar handler det ikke om, hvor hurtigt det udvikler sig, men hvordan det udvikler sig. Vores relationer til artisterne er enormt vigtige, for at de bygger en tillid til os og tør stå frem på scenen med noget nyt og eksperimenterende. </p>
+    <p> Det er den kæmpe dedikation og ambitioner, som personalet, de frivllige og ikke mindst artisterne har, som gør Radar til Radar. For ikke at glemme vores fantastiske publikum. Alt det samlet et sted er en oplevelse. Og det er her, at vi lever i nuet. Lader hverdagsspekulationerne sive ud for en stund. Og netop dette er enormt vigtigt, når vi levet i det samfundet, som gør at vi hele tiden skal være på. Derfor ser vi Radar, som meget mere end bare et spillested.</p>
+    <p>Det er her rummelighed og relationer mødes. Ambitioner, avantgarde og dedikation. Det er Radar.</p>
 </main>
         
    
