--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Radar</title>
+    <meta name="title" content="Velkommen til Radar - Aarhus kulturbærerende spillested">
+    <meta name="description" content="Velkommen til Radar! Hold dig opdateret på kommende events! Tilmeld dig vores nyhedsbrev, og følg med på Instagram.">
+    <title>Velkommen til Radar</title>
     <link rel="icon" type="image/x-icon" href="img/faveicon.png">
     <link rel="stylesheet" href="style.css/forside.css">
 </head>
