--- a/program.html
+++ b/program.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="title" content="Kommende events - Radar">
+    <meta name="description" content="Her kan du se kommende events og koncerter med vores modige og dedikeret upcoming artister. Klik på et af billederne og læs mere om din favorit">
     <title>Kommende events</title>
     <link rel="icon" type="image/x-icon" href="img/faveicon.png">
     <link rel="stylesheet" href="style.css/program.css">
