--- a/historie.html
+++ b/historie.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="title" content="Om Radar - vores værdier og visioner">
+    <meta name="description" content="Lær mere om Radar og vores værdier. Vi støtter upcoming artister, skaber inkluderende fællesskaber og arbejder for at fremme kreativitet og kultur.">
     <title>Vores værdier</title>
     <link rel="icon" type="image/x-icon" href="img/faveicon.png">
     <link rel="stylesheet" href="style.css/historie.css">
