--- a/vindbillet.html
+++ b/vindbillet.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Køb billet til ung-skab</title>
+    <meta name="title" content="">
+    <meta name="description" content="">
+    <title>Vind billetter</title>
     <link rel="icon" type="image/x-icon" href="img/faveicon.png">
     <link rel="stylesheet" href="style.css/vind.css">
 </head>
