--- a/billet.html
+++ b/billet.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="title" content="">
-    <meta name="description" content="">
+    <meta name="title" content="Køb billetter - events og koncerter">
+    <meta name="description" content="Køb billetter til Radars kommende events og koncerter. Oplev spændende artister og sikre din plads nu. Klik her og få adgang til unikke oplevelser.">
     <title>Køb billet</title>
     <link rel="icon" type="image/x-icon" href="img/faveicon.png">
     <link rel="stylesheet" href="style.css/billet.css">
