--- a/info.html
+++ b/info.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="title" content="">
-    <meta name="description" content="">
+    <meta name="title" content="Praktisk information - Radar">
+    <meta name="description" content="Find praktisk information om Radar. Få overblik over adresse, billetter, garderobe og andre vigtige detaljer for dit besøg hos os.">
     <title>Praktisk information</title>
     <link rel="icon" type="image/x-icon" href="img/faveicon.png">
     <link rel="stylesheet" href="style.css/info.css">
