--- a/vindbillet.html
+++ b/vindbillet.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="title" content="">
-    <meta name="description" content="">
-    <title>Vind billetter</title>
+    <meta name="title" content="Vind billetter - følg os på Instagram">
+    <meta name="description" content="Vind billetter til Radars events og koncerter! Følg os på Instagram for at deltage i konkurrencer og måske er du den heldige.">
+    <title>Vind billetter - Radar Instagram</title>
     <link rel="icon" type="image/x-icon" href="img/faveicon.png">
     <link rel="stylesheet" href="style.css/vind.css">
 </head>
