--- a/stot.html
+++ b/stot.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="title" content="">
-    <meta name="description" content="">
+    <meta name="title" content="Støt Radar - gør en forskel for Aarhus kultur">
+    <meta name="description" content="Støt Radar og vær med til at fremme upcoming artister og kreativ kultur. Bliv en del af fællesskabet og hjælp os med at skabe unikke oplevelser.">
     <title>Støt Radar</title>
     <link rel="icon" type="image/x-icon" href="img/faveicon.png">
     <link rel="stylesheet" href="style.css/stot.css">
