--- a/del.html
+++ b/del.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="title" content="">
-    <meta name="description" content="">
-    <title>Køb billet til ung-skab</title>
+    <meta name="title" content="Del dine minder og vind drikkevarer">
+    <meta name="description" content="Del dine minder fra Radars events på din Instastory! Tag os i dine oplevelser, og vær med til at sprede inspiration og kreativitet i fællesskabet.">
+    <title>Del og vind</title>
     <link rel="icon" type="image/x-icon" href="img/faveicon.png">
     <link rel="stylesheet" href="style.css/del.css">
 </head>
