--- a/ungskab.html
+++ b/ungskab.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="title" content="">
-    <meta name="description" content="">
-    <title>Køb billet til ung-skab</title>
+    <meta name="title" content="Køb billet til UNG-SKAB på Radar">
+    <meta name="description" content="Køb din billet til Ung-Skab og vær med til at opleve talentfulde upcoming artister. Køb din billet i dag og vær en del af en uforglemmelig aften.">
+    <title>Køb billet til UNG-SKAB</title>
     <link rel="icon" type="image/x-icon" href="img/faveicon.png">
     <link rel="stylesheet" href="style.css/ungskab.css">
 </head>
