--- a/tillykke.html
+++ b/tillykke.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="title" content="">
-    <meta name="description" content="">
+    <meta name="title" content="Køb bekræftet - din billet">
+    <meta name="description" content="Tak for dit billetkøb! Din billet til Radar's kommende event er bekræftet. Vi glæder os til at se dig til en uforglemmelig oplevelse.">
     <title>Køb bekræftet</title>
     <link rel="icon" type="image/x-icon" href="img/faveicon.png">
     <link rel="stylesheet" href="style.css/billet.css">
