--- a/kalender.html
+++ b/kalender.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="title" content="">
-    <meta name="description" content="">
-    <title>Kalender</title>
+    <meta name="title" content="Kalender for foråret 2025 - Radar">
+    <meta name="description" content="Se Radars kalender for foråret 2025 og find kommende events, koncerter og aktiviteter. Hold dig opdateret med spændende oplevelser hele sæsonen.">
+    <title>Kalender - forår 2025</title>
     <link rel="icon" type="image/x-icon" href="img/faveicon.png">
     <link rel="stylesheet" href="style.css/kalender.css">
 </head>
