--- a/oensk.html
+++ b/oensk.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="title" content="">
-    <meta name="description" content="">
+    <meta name="title" content="Ønsk en kunstner her">
+    <meta name="description" content="Ønsk din yndlingskunstner til Radar's kommende events. Fortæl os, hvem du gerne vil se, og vær med til at forme fremtidige line-up.">
     <title>Ønsk en kunstner</title>
     <link rel="icon" type="image/x-icon" href="img/faveicon.png">
     <link rel="stylesheet" href="style.css/oensk.css">
