upload billede plakat stående

--- a/kalender.html
+++ b/kalender.html
@@ -70,7 +70,10 @@
 
     <section class="kalender">
         <img src="program/plakat.webp" alt="kalender">
+        <img src="img/plakat-staaende.png" alt="">
     </section>
+
+    
    
 </main>
         
