link til alle sider er korrekte og opdateret

--- a/historie.html
+++ b/historie.html
@@ -110,8 +110,8 @@
    
     <footer class="footer">
         <a href="index.html"><img src="img/logo.lyserood.png" alt="logo" id="logo"></a>
-        <a href="index.html"><img src="img/adresse.png" alt="adresse" id="adresse"></a>
-        <a href="index.html"><img src="img/instalogo.png" alt="instagram logo" id="insta"></a>
+        <a href="https://maps.app.goo.gl/gnCe63zWphHasYLV7"><img src="img/adresse.png" alt="adresse" id="adresse"></a>
+        <a href="https://www.instagram.com/radarlive?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==><img src="img/instalogo.png" alt="instagram logo" id="insta"></a>
     </footer>
 </body>
 </html>
