--- a/ungskab.html
+++ b/ungskab.html
@@ -51,7 +51,7 @@
     
                 <li><a href="#"class="uli">Om Radar</a>
                     <ul>
-                        <li><a href="#">Vores værdier</a></li>
+                        <li><a href="historie.html">Vores værdier</a></li>
                         <li><a href="#">Kontakt</a></li>
                         <li><a href="#">Bliv frivillig</a></li>
                       
@@ -100,8 +100,8 @@
    
     <footer class="footer">
         <a href="index.html"><img src="img/logo.lyserood.png" alt="logo" id="logo"></a>
-        <a href="index.html"><img src="img/adresse.png" alt="adresse" id="adresse"></a>
-        <a href="index.html"><img src="img/instalogo.png" alt="instagram logo" id="insta"></a>
+        <a href="https://maps.app.goo.gl/gnCe63zWphHasYLV7"><img src="img/adresse.png" alt="adresse" id="adresse"></a>
+        <a href="https://www.instagram.com/radarlive?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="><img src="img/instalogo.png" alt="instagram logo" id="insta"></a>
     </footer>
 </body>
 </html>
